@@ -112,10 +112,14 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.3</version>
                 <configuration>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>javafx.controls,javafx.media</arg>
+                    </compilerArgs>
                     <release>${maven.compiler.release}</release>
-                    <jlinkImageName>hellofx</jlinkImageName>
-                    <launcher>launcher</launcher>
-                    <mainClass>hellofx/org.openjfx.App</mainClass>
+                    <!--<jlinkImageName>hellofx</jlinkImageName>-->
+                    <!--<launcher>launcher</launcher>-->
+                    <mainClass>Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
